fix double scrollbar

--- a/stickmap/stickmap.css
+++ b/stickmap/stickmap.css
@@ -438,6 +438,13 @@ body.vertical ::-webkit-scrollbar-button {
     background-color: #315e6f;
 }
 
+::-webkit-scrollbar-button:vertical:start:increment,
+::-webkit-scrollbar-button:vertical:end:decrement,
+::-webkit-scrollbar-button:horizontal:start:increment,
+::-webkit-scrollbar-button:horizontal:end:decrement {
+    display: none;
+}
+
 #region-list-container {
     position: relative;
 }
